<resources>
    <string name="main_name">ProRab</string>
    <string name="future_things">Some future things</string>
    <string name="new_game">Новая игра</string>
    <string name="continue_game">Продолжить</string>
    <string name="rules">Правила игры</string>
    <string name="exit">Выход</string>
    <string name="description">Only picture</string>
    <string name="skills">Навыки:</string>
    <string name="execute">Вып.</string>
    <string name="work_study">Работа/Учеба</string>
    <string name="building">Строительство</string>
    <string name="shop">Магазин</string>
    <string name="main_menu">Главное меню</string>
    <string name="back_to_chose">Назад к выбору действий</string>
    <string name="start_build">Построить</string>
    <string name="neural">Нейронная сеть</string>
    <string name="money">Деньги</string>
    <string name="add">Добавить</string>
    <string name="subtract">Вычесть</string>
    <string name="wanted">Желаемый результат</string>
    <string name="training">Тренировать</string>
    <string name="money_w">Деньги(веса)</string>
    <string name="add_w">Добавить(веса)</string>
    <string name="subtract_w">Вычесть(веса)</string>
    <string name="synapse_w">Синапс(веса)</string>
    <string name="synapse_in">Вход синапса</string>
    <string name="synapse_out">Выход синапса</string>
    <string name="result_b">Результат до нормализации</string>
    <string name="result_a">Результат после нормализации</string>
    <string name="error">Ошибка</string>

    <string name="app_name">ProRab</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
