<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:textSize="25sp"
            android:text="@string/main_name"/>
        <ImageView
            android:contentDescription="@string/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/a1"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginEnd="40dp"
        android:layout_weight="1">
        <Button
            android:onClick="continue_game"
            android:id="@+id/continue_game"
            android:text="@string/continue_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:onClick="new_game"
            android:text="@string/new_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:onClick="rules"
            android:text="@string/rules"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:onClick="exit"
            android:text="@string/exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>